# osmquadtree-geometry

./: .gitignore  Cargo.toml
src/: addparenttag.rs  default_style.rs  geometry_block.rs  lib.rs  minzoom.rs  multipolygons.rs  pack_geometry.rs  position.rs  process_geometry.rs  relationtags.rs  style.rs  tempfile.rs  waywithnodes.rs  wkb.rs
src/elements/: complicatedpolygongeometry.rs  linestringgeometry.rs  mod.rs  pointgeometry.rs  simplepolygongeometry.rs
src/postgresql/: altconnection.rs  geosgeometry.rs  mod.rs  postgresconnection.rs  postgresqloptions.rs  prepcopy.rs  tablespec.rs  writepostgresql.rs
