[package]
name = "osmquadtree-geometry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


flate2 = "1"

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

clap="2"
csv = "1.1"
#postgres = { version = "0.19", features = ["with-serde_json-1"]}
pq-sys = "0.4"

#geos = { version="7", features = ["v3_8_0", "dox"]} //leaks memory
geos-sys = { version="2", features = ["v3_8_0"]}


simple-protocolbuffers = { git = "https://github.com/jharris2268/simple-protocolbuffers.git", branch = "main" }
channelled-callbacks = { git = "https://github.com/jharris2268/channelled-callbacks.git", branch = "main" }
osmquadtree = { git = "https://github.com/jharris2268/osmquadtree-rust.git", branch = "main" }

num_cpus = "*"

[profile.release]
#debug = true
